--- a/login.html
+++ b/login.html
@@ -3,10 +3,8 @@
   <head>
 
     <title>
-My app
+Login
     </title>
   </head>
-  <body>This is my app am learing git!!
-    login form
-  </body>
+  <body>This is the login section!</body>
 </html>
